--- a/src/editor.scss
+++ b/src/editor.scss
@@ -28,7 +28,7 @@
 
 	padding: 5px;
 	border-style: var(--showGridLines);
-	border-width: var(--gridLinesWidth);
+	border-width: var(--gridLineWidth);
 }
 
 .header {
