--- a/src/editor.scss
+++ b/src/editor.scss
@@ -8,29 +8,6 @@
 	border: 1px dotted #f00;
 }
 
-.grid-control {
-	//css variables
-	--gridTemplateColumns: auto;
-	--gridTemplateRows: auto;
-
-	// background-color: #21759b;
-	display: grid;
-	grid-template-columns: var(--gridTemplateColumns);
-	grid-template-rows: var(--gridTemplateRows);
-	gap: 0px 0px;
-	overflow-x: auto;
-}
-
-.grid-cell {
-	//css variables
-	--showGridLines: hidden;
-	--gridLineWidth: 0px;
-
-	padding: 5px;
-	border-style: var(--showGridLines);
-	border-width: var(--gridLineWidth);
-}
-
 .header {
 	justify-self: center;
 	align-self: end;
@@ -41,13 +18,13 @@
 	justify-self: start;
 }
 
-.banded-row {
+.grid-control__cells--banded-row {
 	--bandedRowColor: #d8dbda;
 
 	background-color: var(--bandedRowColor);
 }
 
-.border {
+.grid-control__cells--border {
 	font-size: small;
 	font-weight: bold;
 	text-align: center;
@@ -66,7 +43,7 @@
 	}
 }
 
-.grid-row-zoom {
+.grid-control__cells--zoom {
 	text-align: center;
 	vertical-align: middle;
 	margin: 0px;
