--- a/src/editor.scss
+++ b/src/editor.scss
@@ -18,6 +18,22 @@
 	justify-self: start;
 }
 
+.inspector-controls-menu__header-alignment--top {
+	display: flex;
+	width: 100%;
+	align-items: start;
+}
+
+.inspector-controls-menu__header-alignment--middle {
+	display: flex;
+	width: 100%;
+	align-items: center;
+}
+
+.inspector-controls-nemu__label--left-margin {
+	margin-left: 12px;
+}
+
 .grid-control__cells--border {
 	font-size: small;
 	font-weight: bold;
@@ -35,14 +51,6 @@
 	&:hover {
 		cursor: pointer;
 	}
-}
-
-.grid-control__cells--zoom {
-	text-align: center;
-	vertical-align: middle;
-	margin: 0px;
-	padding: 0px;
-
 }
 
 .column-menu {
