Refactor grid structure for Header row

--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,7 @@
 	--gridTemplateColumns: auto;
 	--gridTemplateRows: auto;
 	--gridAlignment: left;
+	--gridNumColumns: 1;
 
 	display: grid;
 	grid-template-columns: var(--gridTemplateColumns);
@@ -39,6 +40,7 @@
 
 .grid-control__header {
 	display: grid;
+	grid-column: 1 / calc(var(--gridNumColumns) + 2);
 	grid-template-columns: subgrid;
 	grid-template-rows: auto;
 }
