--- a/src/editor.scss
+++ b/src/editor.scss
@@ -21,7 +21,7 @@
 .inspector-controls-menu__header-alignment--top {
 	display: flex;
 	width: 100%;
-	align-items: start;
+	align-items: flex-start;
 }
 
 .inspector-controls-menu__header-alignment--middle {
