--- a/src/editor.scss
+++ b/src/editor.scss
@@ -8,6 +8,14 @@
 	border: 1px dotted #f00;
 }
 
+.border-box-workaround {
+	width: 100%;
+}
+
+.border-box-workaround .components-base-control {
+	margin-bottom: 0;
+}
+
 .header {
 	justify-self: center;
 	align-self: end;
@@ -51,6 +59,25 @@
 	&:hover {
 		cursor: pointer;
 	}
+}
+
+.grid-control__inspector-controls--read-only {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	gap: 8px;
+}
+
+.grid-control__inspector-controls--read-only-label {
+	font-size: 11px;
+	font-weight: 500;
+	text-overflow: ellipsis;
+	text-transform: uppercase;
+
+}
+
+.grid-control__inspector-controls--border-box-control {
+	height: 15px;
 }
 
 .column-menu {
