Allow row height configuration

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,7 @@
 .grid-control {
 	//css variables
 	--gridTemplateColumns: auto;
-	--gridTemplateRows: auto;
+	// --gridTemplateRows: auto;
 	--gridAlignment: left;
 	--gridNumColumns: 1;
 	--horizontalScroll: auto;
@@ -35,12 +35,25 @@
 	display: grid;
 	overflow-x: var(--horizontalScroll);
 	grid-template-columns: var(--gridTemplateColumns);
-	grid-template-rows: repeat(2, auto);
+	// grid-template-rows: var(--gridTemplateRows);
 	gap: 0px;
 	justify-content: var(--gridAlignment);
 }
 
+.grid-control__border {
+	display: grid;
+	overflow-x: inherit;
+	grid-column: 1 / calc(var(--gridNumColumns) + 2);
+	grid-row: 1/2;
+	grid-template-columns: subgrid;
+	grid-template-rows: auto;
+	position: sticky;
+}
+
 .grid-control__header {
+	--startGridHeaderRowNbr: 1;
+	--endGridHeaderRowNbr: 2;
+	--gridTemplateHeaderRows: auto;
 	--headerTextAlignment: left;
 	--headerBorderTopColor: white;
 	--headerBorderTopStyle: solid;
@@ -57,10 +70,11 @@
 
 
 	display: grid;
-	overflow-x: hidden;
+	overflow-x: inherit;
 	grid-column: 1 / calc(var(--gridNumColumns) + 2);
+	grid-row: var(--startGridHeaderRowNbr) / var(--endGridHeaderRowNbr);
 	grid-template-columns: subgrid;
-	grid-template-rows: auto;
+	grid-template-rows: var(--gridTemplateHeaderRows);
 	position: sticky;
 	border-top-color: var(--headerBorderTopColor);
 	border-top-style: var(--headerBorderTopStyle);
@@ -138,7 +152,7 @@
 	display: grid;
 	grid-column: 1 / calc(var(--gridNumColumns) + 2);
 	grid-template-columns: subgrid;
-	grid-template-rows: subgrid;
+	// grid-template-rows: subgrid;
 }
 
 .grid-control__body-rows--banded-row {
@@ -154,6 +168,8 @@
 	position: relative;
 	padding: 5px;
 	margin: -1px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	border-style: var(--showGridLines);
 	border-width: var(--gridLineWidth);
 	border-color: black;
