--- a/src/components/configure-row-height/style.scss
+++ b/src/components/configure-row-height/style.scss
@@ -7,26 +7,26 @@ fieldset {
     margin: 10px;
 }
 
-.column-width--not-visible {
+.row-height--not-visible {
     display: none;
 }
 
-.column-width-span-input {
+.row-height-span-input {
     display: flex;
     width: 100%;
 }
 
-.column-width-value-input {
+.row-height-value-input {
     width: 65%;
     margin: 5px;
 }
 
-.column-width-unit-input {
+.row-height-unit-input {
     width: 30%;
     margin: 5px;
 }
 
-.column-label {
+.row-label {
     text-align: center;
     font-size: large;
     font-style: italic;
