Fix height for table rows without content

--- a/src/style.scss
+++ b/src/style.scss
@@ -175,6 +175,7 @@
 	border-width: var(--gridLineWidth);
 	border-color: black;
 	justify-content: var(--bodyTextAlignment);
+	min-height: 1.5em;
 	// justify-content: var(--gridAlignment);
 }
 
